# Glimpseon

./: .gitignore  ClassLively.py  Glimpseon.py  README.md  changelog.md  city_selector.py  classlively_native.pyd  config.py  constants.py  downloader.py  exclude_list.txt  logger.py  requirements.txt  setting.py  update.7z  version.py  version_updater.py
ClassLively.UI/: App.xaml  App.xaml.cs  ClassLively.UI.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest  crash_log.txt
app-1.0.0/: GlimpseonMain.py  Glimpseon_native.pyd  record.json
app-1.0.0/glimpseon_native/: CMakeLists.txt
app-1.0.0/glimpseon_native/src/: hook.cpp  hook.h  image.cpp  image_blur.h  sys.cpp
classlively_native/: CMakeLists.txt
components/: __init__.py  base.py  clock.py  manager.py  poetry.py  weather.py
core/: api_server.py  cache_manager.py  component.py  config.py  constants.py  downloader.py  font_manager.py  linkage.py  logger.py  media.py  notification.py  process_manager.py  quick_launch_config.py  timetable.py  updater.py  utils.py
data/: __init__.py  city.db  software_list.py  url_dir.py
docs/: multi-language-integration-plan.md  project-restructure-plan.md  winui3-migration-plan.md
glimpseon_native/: classlively_native.pyd
locale/: en_US.json  zh_CN.json  zh_TW.json
resource/: credits.json
services/: __init__.py  config_manager.py  lyrics.py  media.py  ncm_memory.py  news.py  poetry.py  poetry_api.py  weather.py  weather_api.py
ui/: __init__.py  about.py  about_interface.py  base_scroll.py  base_scroll_area.py  city_selector.py  common.py  (+23 more)
(+132 files in other folders)
